# coronavirus_prediction

./: README.md  config.json  coronavirus_ccp_predictions.py  data_grabber.py  main.py  pyproject.toml  requirements.txt
data_grabbers/: cases_data_grabber.py  data_grabber.py  deaths_data_grabber.py  graphs_data_grabber.py
datasets/: cases_dataset_2020-02-13.csv  cases_dataset_2020-02-14.csv  cases_dataset_2020-02-15.csv  cases_dataset_2020-02-16.csv  cases_dataset_2020-02-17.csv  cases_dataset_2020-02-18.csv  cases_dataset_2020-02-19.csv  cases_dataset_2020-02-20.csv  cases_dataset_2020-02-21.csv  cases_dataset_2020-02-22.csv  cases_dataset_2020-02-23.csv  cases_dataset_2020-02-24.csv  cases_dataset_2020-02-25.csv  cases_dataset_2020-02-26.csv  cases_dataset_2020-02-27.csv  cases_dataset_2020-02-28.csv  cases_dataset_2020-02-29.csv  cases_dataset_2020-03-01.csv  cases_dataset_2020-03-03.csv  cases_dataset_2020-03-04.csv  cases_dataset_2020-03-05.csv  cases_dataset_2020-03-07.csv  cases_dataset_2020-03-08.csv  cases_dataset_2020-03-10.csv  cases_dataset_2020-03-11.csv  cases_dataset_2020-03-12.csv  cases_dataset_2020-03-13.csv  cases_dataset_2020-03-14.csv  cases_dataset_2020-03-15.csv  cases_dataset_2020-03-16.csv  cases_dataset_2020-03-17.csv  cases_dataset_2020-03-18.csv  cases_dataset_2020-03-19.csv  cases_dataset_2020-03-20.csv  cases_dataset_2020-03-21.csv  cases_dataset_2020-03-22.csv  cases_dataset_2020-03-23.csv  cases_dataset_2020-03-24.csv  cases_dataset_2020-03-25.csv  cases_dataset_2020-03-26.csv  (+131 more)
models/: NeuralNetModel.py  PolynomialRegressionModel.py
