[tool.poetry]
name = "coronavirus_prediction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.2"
matplotlib = "^3.2.1"
scikit-learn = "^0.22.2"
beautifulsoup4 = "^4.8.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
